Replaced form label with placeholder to avoid autocorrect issue on mobile. Added validation to check if the user has submitted a sentence that is long enough and starts with the correct letters

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     background-color: #9AC2C9;
     font-family: Kufam, cursive;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -63,6 +64,10 @@ input {
     display: inline-block;
     margin-top: 1%;
     margin-bottom: 1%;
+}
+
+#invalid-submission {
+    display: none;
 }
 
 #select-sentence {
